--- a/pages/recuperarContrasenia.html
+++ b/pages/recuperarContrasenia.html
@@ -9,13 +9,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="../libs/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/public/libs/bootstrap/css/bootstrap.min.css">
 
   <!-- Bootstrap Icons -->
-  <link rel="stylesheet" href="../assets/icons/bootstrap-icons.css">
+  <link rel="stylesheet" href="/public/assets/icons/bootstrap-icons.css">
 
   <!-- Estilos personalizados -->
-  <link rel="stylesheet" href="../assets/css/style.css">
+  <link rel="stylesheet" href="/public/assets/css/style.css">
 </head>
 <body class="recuperar-page">
 
@@ -61,8 +61,8 @@
   <div id="footer-container"></div>
 
   <!-- JS -->
-  <script src="../libs/jquery/jquery.min.js"></script>
-  <script src="../libs/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="../assets/js/main.js"></script>
+  <script src="/public/libs/jquery/jquery.min.js"></script>
+  <script src="/public/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/public/assets/js/main.js"></script>
 </body>
 </html>
