--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="libs/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/public/libs/bootstrap/css/bootstrap.min.css">
 
   <!-- CSS personalizado -->
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="/public/assets/css/style.css">
 </head>
 <body>
 
@@ -38,7 +38,7 @@
       <div class="row g-4">
         <div class="col-md-3">
           <div class="card h-100">
-            <img src="assets/img/futbol.png" class="card-img-top" alt="Fútbol">
+            <img src="/public/assets/img/futbol.png" class="card-img-top" alt="Fútbol">
             <div class="card-body">
               <h5 class="card-title">Fútbol</h5>
               <p class="card-text">Reserva canchas de fútbol para partidos amistosos o entrenamientos.</p>
@@ -47,7 +47,7 @@
         </div>
         <div class="col-md-3">
           <div class="card h-100">
-            <img src="assets/img/tenis.png" class="card-img-top" alt="Tenis">
+            <img src="/public/assets/img/tenis.png" class="card-img-top" alt="Tenis">
             <div class="card-body">
               <h5 class="card-title">Tenis</h5>
               <p class="card-text">Encuentra canchas de tenis con diferentes superficies y horarios.</p>
@@ -56,7 +56,7 @@
         </div>
         <div class="col-md-3">
           <div class="card h-100">
-            <img src="assets/img/baloncesto.png" class="card-img-top" alt="Baloncesto">
+            <img src="/public/assets/img/baloncesto.png" class="card-img-top" alt="Baloncesto">
             <div class="card-body">
               <h5 class="card-title">Baloncesto</h5>
               <p class="card-text">Juega en canchas cubiertas o al aire libre, perfectas para cualquier nivel.</p>
@@ -65,7 +65,7 @@
         </div>
         <div class="col-md-3">
           <div class="card h-100">
-            <img src="assets/img/voleibol.png" class="card-img-top" alt="Voleibol">
+            <img src="/public/assets/img/voleibol.png" class="card-img-top" alt="Voleibol">
             <div class="card-body">
               <h5 class="card-title">Voleibol</h5>
               <p class="card-text">Organiza partidos de voleibol en canchas de arena o cubiertas.</p>
@@ -94,7 +94,7 @@
           <p><strong>¡En Canchas SV, tu juego empieza con un clic!</strong></p>
         </div>
         <div class="col-md-6">
-          <img src="assets/img/sobrenosotros.png" alt="Sobre nosotros" class="img-fluid rounded shadow">
+          <img src="/public/assets/img/sobrenosotros.png" alt="Sobre nosotros" class="img-fluid rounded shadow">
         </div>
       </div>
     </div>
@@ -104,8 +104,8 @@
   <div id="footer-container"></div>
 
   <!-- JS -->
-  <script src="libs/jquery/jquery.min.js"></script>
-  <script src="libs/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/js/main.js"></script>
+  <script src="/public/libs/jquery/jquery.min.js"></script>
+  <script src="/public/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/public/assets/js/main.js"></script>
 </body>
 </html>
