--- a/pages/administrador/detalleCancha.html
+++ b/pages/administrador/detalleCancha.html
@@ -9,15 +9,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 
   <!-- Bootstrap -->
-  <link rel="stylesheet" href="../../libs/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/public/libs/bootstrap/css/bootstrap.min.css">
 
   <!-- Bootstrap Icons -->
-  <link rel="stylesheet" href="../../assets/icons/bootstrap-icons.css">
+  <link rel="stylesheet" href="/public/assets/icons/bootstrap-icons.css">
 
   <!-- Estilos -->
-  <link rel="stylesheet" href="../../assets/css/style.css">
-  <link rel="stylesheet" href="../../assets/css/sidebar.css">
-  <link rel="stylesheet" href="../../assets/css/detalleCancha.css">
+  <link rel="stylesheet" href="/public/assets/css/style.css">
+  <link rel="stylesheet" href="/public/assets/css/sidebar.css">
+  <link rel="stylesheet" href="/public/assets/css/detalleCancha.css">
 </head>
 
 <body>
@@ -64,13 +64,13 @@
           <div id="carouselCancha" class="carousel slide mb-4" data-bs-ride="carousel">
             <div class="carousel-inner rounded-3 shadow-sm" id="imagenes-cancha">
               <div class="carousel-item active">
-                <img src="../../assets/img/cancha1.jpg" class="d-block w-100" alt="Cancha principal">
+                <img src="/public/assets/img/cancha1.jpg" class="d-block w-100" alt="Cancha principal">
               </div>
               <div class="carousel-item">
-                <img src="../../assets/img/cancha2.jpg" class="d-block w-100" alt="Vista lateral">
+                <img src="/public/assets/img/cancha2.jpg" class="d-block w-100" alt="Vista lateral">
               </div>
               <div class="carousel-item">
-                <img src="../../assets/img/cancha3.jpg" class="d-block w-100" alt="Área techada">
+                <img src="/public/assets/img/cancha3.jpg" class="d-block w-100" alt="Área techada">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselCancha" data-bs-slide="prev">
@@ -123,10 +123,10 @@
   </main>
 
   <!-- JS -->
-  <script src="../../libs/jquery/jquery.min.js"></script>
-  <script src="../../libs/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="../../assets/js/main.js"></script>
-  <script src="../../assets/js/sidebar.js"></script>
-  <script src="../../assets/js/administrador/detalleCancha.js"></script>
+  <script src="/public/libs/jquery/jquery.min.js"></script>
+  <script src="/public/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/public/assets/js/main.js"></script>
+  <script src="/public/assets/js/sidebar.js"></script>
+  <script src="/public/assets/js/administrador/detalleCancha.js"></script>
 </body>
 </html>
