--- a/pages/administrador/historialCancha.html
+++ b/pages/administrador/historialCancha.html
@@ -9,15 +9,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 
   <!-- Bootstrap -->
-  <link rel="stylesheet" href="../../libs/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/public/libs/bootstrap/css/bootstrap.min.css">
 
   <!-- Iconos -->
-  <link rel="stylesheet" href="../../assets/icons/bootstrap-icons.css">
+  <link rel="stylesheet" href="/public/assets/icons/bootstrap-icons.css">
 
   <!-- Estilos -->
-  <link rel="stylesheet" href="../../assets/css/style.css">
-  <link rel="stylesheet" href="../../assets/css/sidebar.css">
-  <link rel="stylesheet" href="../../assets/css/historialCancha.css">
+  <link rel="stylesheet" href="/public/assets/css/style.css">
+  <link rel="stylesheet" href="/public/assets/css/sidebar.css">
+  <link rel="stylesheet" href="/public/assets/css/historialCancha.css">
 </head>
 
 <body>
@@ -53,12 +53,12 @@
   </main>
 
   <!-- JS -->
-  <script src="../../libs/jquery/jquery.min.js"></script>
-  <script src="../../libs/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="../../assets/js/main.js"></script>
-  <script src="../../assets/js/sidebar.js"></script>
+  <script src="/public/libs/jquery/jquery.min.js"></script>
+  <script src="/public/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/public/assets/js/main.js"></script>
+  <script src="/public/assets/js/sidebar.js"></script>
 
   <!-- Script del historial dinámico -->
-  <script src="../../assets/js/historialCancha.js"></script>
+  <script src="/public/assets/js/historialCancha.js"></script>
 </body>
 </html>
