--- a/login/index.html
+++ b/login/index.html
@@ -52,7 +52,7 @@
                   <input class="form-check-input" type="checkbox" id="recordarme" />
                   <label class="form-check-label" for="recordarme">Recordarme</label>
                 </div>
-                <a href="#" class="text-decoration-none text-primary small">¿Olvidaste tu contraseña?</a>
+                <a href="/recuperar-cuenta" class="text-decoration-none text-primary small">¿Olvidaste tu contraseña?</a>
               </div>
 
               <button type="submit" class="btn btn-primary w-100">Iniciar Sesión</button>
